--- a/huntingcoder/styles/Home.module.css
+++ b/huntingcoder/styles/Home.module.css
@@ -54,7 +54,6 @@
 }
 
 .description {
-  margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
 }
@@ -142,5 +141,7 @@
 }
 
 .myimg{
-  border-radius: 12px
+  border-radius: 12px;
+  margin: 20px;
+
 }
