--- a/huntingcoder/styles/About.module.css
+++ b/huntingcoder/styles/About.module.css
@@ -1,3 +1,9 @@
 .box{
-    background-color: aquamarine;
+    
+  max-width: 100vh;
+  margin: auto;
+  margin-top: 4rem;
+}
+.h1{
+    text-align: center;
 }
